traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:13: error: not found: value c
      ecritMessage(c)
                   ^TraversalDiagonal:14: error: not found: value c
      c += 1;
      ^